prevent horizontal scrolling on other browsers

--- a/src/index.styl
+++ b/src/index.styl
@@ -5,6 +5,8 @@
 
 html
   baseSize()
+  scroll-behavior: smooth
+  overflow-x: hidden
 
 body
   margin: 0
